--- a/pom.xml
+++ b/pom.xml
@@ -104,5 +104,21 @@
 			</plugin>
 		</plugins>
 	</build>
-
+    <profiles>
+    <profile>
+       <id>MavenRepository</id>
+           <repositories>
+            <repository>
+                <id>central</id>
+                <url>https://repo1.maven.org/maven2</url>
+                <snapshots>
+                    <enabled>false</enabled>
+                </snapshots>
+                <releases>
+                    <enabled>true</enabled>
+                </releases>
+            </repository>
+        </repositories>
+    </profile>
+</profiles>
 </project>
