--- a/pom.xml
+++ b/pom.xml
@@ -69,12 +69,12 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-	<!-- <repositories>
+	<repositories>
       <repository>
-         <id>nexus-premise</id>
-         <url>http://ec2-15-206-189-141.ap-south-1.compute.amazonaws.com/maven-public</url>
+         <id>central</id>
+         <url>https://repo1.maven.org/maven2/</url>
       </repository>
-   </repositories> -->
+   </repositories>
    <distributionManagement>
       <repository>
          <id>central</id>
