--- a/pom.xml
+++ b/pom.xml
@@ -105,4 +105,26 @@
 			</plugin>
 		</plugins>
 	</build>
+
+	<repositories>
+        <repository>
+            <id>spring-snapshots</id>
+            <url>https://repo1.spring.io/snapshot</url>
+            <snapshots><enabled>true</enabled></snapshots>
+        </repository>
+        <repository>
+            <id>spring-milestones</id>
+            <url>https://repo1.spring.io/milestone</url>
+        </repository>
+    </repositories>
+    <pluginRepositories>
+        <pluginRepository>
+            <id>spring-snapshots</id>
+            <url>https://repo1.spring.io/snapshot</url>
+        </pluginRepository>
+        <pluginRepository>
+            <id>spring-milestones</id>
+            <url>https://repo1.spring.io/milestone</url>
+         </pluginRepository>
+    </pluginRepositories>
 </project>
